# cppulse

./: .clang-format  .cppulserc.example.yml  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TASK_SPEC.md  docker-compose.ci.yml  docker-compose.yml
.claude/: settings.json
.claude/agents/: code-reviewer.md  cpp-engineer.md  doc-writer.md  python-engineer.md  spec-writer.md  test-writer.md
.claude/rules/: cpp-style.md  python-style.md  safety-critical.md  testing.md
.claude/skills/demo-report/: SKILL.md
.claude/skills/implement-feature/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/session-handoff/: SKILL.md
.claude/skills/write-adr/: SKILL.md
.github/actions/cppulse/: Dockerfile  action.yml  diff_findings.py  entrypoint.sh  post_comment.py
.github/workflows/: ci.yml
analyzer-core/: .dockerignore  CMakeLists.txt  Dockerfile
analyzer-core/src/: analyzer.cpp  analyzer.h  config.cpp  config.h  file_discovery.cpp  file_discovery.h  finding.h  hello_libclang.cpp  hello_libclang.h  main.cpp  output_writer.cpp  output_writer.h  rule_base.h  rule_engine.h
analyzer-core/src/rules/complexity/: cyclomatic_complexity.cpp  cyclomatic_complexity.h  function_length.cpp  function_length.h  parameter_count.cpp  parameter_count.h
analyzer-core/src/rules/memory_safety/: manual_memory_mgmt.cpp  manual_memory_mgmt.h  raw_pointer_ownership.cpp  raw_pointer_ownership.h  unsafe_array_access.cpp  unsafe_array_access.h
analyzer-core/src/rules/misra/: init_all_vars.cpp  init_all_vars.h  no_dynamic_alloc.cpp  no_dynamic_alloc.h  no_goto.cpp  no_goto.h  no_implicit_conversion.cpp  no_implicit_conversion.h  no_recursion.cpp  no_recursion.h  no_union.cpp  no_union.h  single_exit.cpp  single_exit.h
analyzer-core/src/rules/modernization/: auto_usage.cpp  auto_usage.h  c_style_cast.cpp  c_style_cast.h  deprecated_headers.cpp  deprecated_headers.h  enum_class.cpp  enum_class.h  missing_override.cpp  missing_override.h  nullptr_usage.cpp  nullptr_usage.h  range_for.cpp  range_for.h  raw_string_literal.cpp  raw_string_literal.h  using_vs_typedef.cpp  using_vs_typedef.h
analyzer-core/tests/: test_compilation_db.cpp  test_config.cpp  test_hello_libclang.cpp  test_rules.cpp
analyzer-core/tests/fixtures/: clean_modern.cpp  complexity_sample.cpp  empty.cpp  memory_safety_sample.cpp  misra_sample.cpp  modernization_sample.cpp  sample.cpp
cli/: .gitkeep  CMakeLists.txt  Dockerfile
cli/src/: main.cpp  orchestrator.cpp  orchestrator.h
cli/tests/: test_cli.cpp
dashboard/: .gitkeep  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: CategoryBreakdown.tsx  FindingsList.tsx  HealthScore.tsx  HotspotTable.tsx  Layout.tsx  RiskPrediction.tsx  Roadmap.tsx  SiloAlerts.tsx
dashboard/src/components/__tests__/: FindingsList.test.tsx  HealthScore.test.tsx  HotspotTable.test.tsx  RiskPrediction.test.tsx  SiloAlerts.test.tsx
dashboard/src/types/: index.ts
docs/: DECISIONS.md  action-usage.md  architecture.md
docs/adr/: ADR-000-template.md  ADR-001-libclang.md  ADR-002-xgboost.md  ADR-003-monorepo.md  ADR-004-json-comms.md  ADR-005-pdf-report.md  ADR-006-production-readiness.md  ADR-007-health-score-formula.md
docs/schemas/: findings.schema.json  git_metrics.schema.json  risk_scores.schema.json  roadmap.schema.json
docs/specs/analyzer-core-cmake/: design.md  requirements.md  tasks.md
examples/fmt/: README.md  findings.json  git_metrics.json  risk_scores.json  roadmap.json
examples/grpc/: README.md  findings.json  git_metrics.json  risk_scores.json  roadmap.json
examples/json/: README.md  findings.json  git_metrics.json  risk_scores.json  roadmap.json
examples/leveldb/: README.md  findings.json  git_metrics.json  risk_scores.json  roadmap.json
examples/poco/: README.md  findings.json  git_metrics.json  risk_scores.json  roadmap.json
examples/poco-workflow/: cppulse.yml
examples/protobuf/: README.md  findings.json  git_metrics.json  risk_scores.json  roadmap.json
git-miner/: Dockerfile  requirements.txt
git-miner/src/: __init__.py  commit_utils.py  main.py  miner.py  schema_validator.py  silo_detector.py  szz_labeler.py
git-miner/tests/: conftest.py  test_commit_utils.py  test_main.py  test_miner.py  test_schema_validator.py  test_silo_detector.py  test_szz_labeler.py
predictor/: Dockerfile  requirements.txt
predictor/src/: __init__.py  feature_engineer.py  health_scorer.py  main.py  model.py  roadmap_generator.py  schema_validator.py
predictor/tests/: test_config.py  test_feature_engineer.py  test_health_scorer.py  test_labels.py  test_model.py
report-engine/: Dockerfile  requirements.txt
report-engine/src/: __init__.py  api.py  pdf_generator.py  schema_validator.py
report-engine/src/templates/: report.html  styles.css
report-engine/tests/: conftest.py  test_api.py  test_cache.py  test_pdf_generator.py  test_schema_validator.py
scripts/: auto-lint.sh  generate_example_readme.py  generate_leaderboard.py  generate_readme_assets.py  integration_test.sh  refresh_showcase.py  save-session-state.sh  showcase_projects.json  validate_json_outputs.py  verify_scores.py
templates/: example_readme.md.j2
tests/: test_gitlab_ci.py
